feat: introduce PartitionBloomFilter for cold partition optimization and switch serialization format to Protobuf
Adds `PartitionBloomFilter` to improve cold partition lookups by skipping unnecessary disk reads. Filters are built during eviction and used for efficient node presence checks. Switches cold partition serialization format from JSON to Protobuf for better performance. Updates related methods to support the new format.